<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ihfnlpbze7o01"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:src="@drawable/download"
            tools:srcCompat="@drawable/download"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/ln2"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/Play"
                android:onClick="playmenu"/>

            <Button
                android:id="@+id/CreateAccount"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:onClick="createAccount"
                android:text="@string/Exit" />

            <Button
                android:id="@+id/Setting"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/Settings"
                android:onClick="Setting"/>

        </LinearLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>